# page-analyzer

./: .env.sample  Makefile  README.md  database.sql  psycopg2-2.9.9-cp311-cp311-macosx_10_9_universal2.whl  pyproject.toml
.github/workflows/: CI.yml
page_analyzer/: app.py  database.py  url.py
page_analyzer/templates/: 404.html  index.html  layout.html  url.html  urls.html
page_analyzer/templates/sections/: flash_messages.html
