[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ivlev Nikita <thel4stofme@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" }
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
